--- a/hons/docs/tBackground.tex
+++ b/hons/docs/tBackground.tex
@@ -68,6 +68,7 @@ Importantly if we invoke each actor exactly the number of times the repetitions 
 This solves two key problems associated with unrestricted streaming systems.
 Firstly each actor must be invoked at least once, which prevents {\em starvation} of certain channles, leading to deadlocks.
 Secondly each actor is executed a finite number of times, which allows the memory buffers to have bounded size.
+When there are precisely enough tokens in every channel for every actor to execute the number of times required by the repetitions vector, then the channels are said to be {\em saturated}.
 Executing actors according to this vector is called the {\em steady state} schedule.
 
 %CHEESE
@@ -92,14 +93,14 @@ Applications of this kind benefit from the more natural expression of the stream
 \section{Fault Tolerance}
 \subsection{Motivating Problems}
 Fault tolerance (FT) has a broad meaning in regards to computer systems.
-Intuitively we think of FT as some mechanisms or practices inherant in systems that prevent them from failing completely under adverse circumstances.
+Intuitively we think of FT as some mechanisms or practices inherent in systems that prevent them from failing completely under adverse circumstances.
 Though this understanding lacks formal grounding, as we shall see it is useful to begin with.
 Most computer users will experience faults on a regular basis, ranging from bugs or errors to more serious security flaws and instability.
 Systems which are able to ignore or recover from such problems may be called fault tolerant.
 
 Whilst home systems may benefit from some ammount of FT, this becomes an absolure requirement for large systems.
-To demonstrate this let us treat faults like a random variable, and say that every hour a computer has a small chance of serious fault (overheated core, disk corruption, terminal bugs or malware, magnetic interference etc.) causing the computer to go offline.
-Reed, Lu and Mendes observed that even given a reasonably small probability, such that an individual computer fails on average after $10^6$ hours, in large systems composed of 10000 computers, at least one component is likely to fail in hunder 100 hours \cite{ree06}.
+To demonstrate this let us treat faults like a random variable, and say that every hour a computer has a small chance of serious fault (CPU error, disk corruption, terminal bugs, power failure etc.) causing the computer to go offline.
+Reed et al observed that even given a reasonably small probability, such that an individual computer fails on average after $10^6$ hours, in large systems composed of 10000 computers, at least one component is likely to fail in hunder 100 hours \cite{ree06}.
 Large systems therefore require stronger guarantees for FT.
 
 However not all FT mechanisms are the same.
@@ -109,7 +110,7 @@ We shall detail the actual mechanisms in the following sections, but to compare 
 			Lamport and Smith's early work on {\em byzantine} fault tolerance \cite{lam86} informs our understading here.
 			The intuition is that the systems designer cannot know in advance which nodes are likely to fail or how, and therefore must cope with the worst possible kinds of faults, namely malicious attacks.
 			That work crucially deals with the notion that a fault can come from any source.
-			Systems such as Google's Mapreduce \cite{dea08} are able to handle most faults, however are unable to recover from faults in certain key machines.
+			Systems such as Google's MapReduce \cite{dea08} are able to handle most faults, however are unable to recover from faults in certain key machines.
 	\item	The overhead for FT must be reasonable.
 			More intuitively it shouldnt cost more to prevent certain kinds of faults than the fault itself costs.
 			Clearly this requirement will vary between situations.
@@ -125,7 +126,7 @@ So long as any one of the replicates succeeds then the computation will succeed,
 
 This mechanism is particularly useful for large systems and systems with relatively heavyweight components.
 In the case of large systems, the replication is usualy viable given sufficient processors over which to duplicate, and these redundant elements significantly increase the mean time to failure.
-However users are more farmiliar with the concept of redundant heavyweigt components, particularly hard disks in RAID.
+However users are more farmiliar with the concept of redundant heavyweight components, particularly hard disks in RAID.
 RAID as the name suggests is a replication strategy providing fault tolerance or performance gains (or both), depending on the configuration.
 
 In this work we examine the FT and overhead of duplicating SDF actors accross multiple processors.
@@ -137,9 +138,9 @@ Though many systems do indeed checkpoint, for our work all systems which recover
 
 In this mechanism, some information about the system's state is stored in a reliable way, so that it can be recovered in the event of a crash.
 One way is to write the node's state to disk before performing a computation, in this way if a node fails during that computation the previous state can be recovered.
-However the revocery information need not be kept or tracked by individual nodes, in the case of Google's Mapreduce the state is stored by the master controller, and in the case of a worker fault the master redistributes the task to a different worker \cite{dea08}.
+However the recovery information need not be kept or tracked by individual nodes, in the case of Google's MapReduce the state is stored by the master controller, and in the case of a worker fault the master redistributes the task to a different worker \cite{dea08}.
 
-This kind of FT is well researched in the area of databases.
+This kind of FT is well researched in the area of databases \cite{cheese}. %CHEESE need to cite this
 Modern databases use various checkpointing methodologies (called {\em commiting}) to make guarantees about the system's robustness.
 These mechanisms are interesting, because they must work on standalone machines, and are not specifically designed for parallel problems.
 Because of this individual computers are able to provide guarantees for robustness, and therefore can be orchestrated to provide robust parallel systems.
