--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -2,7 +2,8 @@
 
 \usepackage{graphicx}
 \usepackage{amssymb,amsmath}
-\usepackage{pslatex}
+%\usepackage{pslatex}
+\usepackage{verbatim}
 \usepackage{theorem}
 \usepackage{pst-all}
 
