ran through a spell checker

--- a/hons/docs/tSystems.tex
+++ b/hons/docs/tSystems.tex
@@ -1,4 +1,5 @@
 \chapter{Systems}
+\label{chapSystems}
 Here i explain the simulator.
 
 also going into detail about how fault tolerance mechanisms work therein
