friday halfway mark

--- a/hons/docs/tModel.tex
+++ b/hons/docs/tModel.tex
@@ -1,4 +1,11 @@
 \chapter{Mathematical Model}
+\label{chapModel}
+
+section needs:
+
+description of AMPL model
+
+Mathematics of actor duplication vv resilience vs communication increase
 
 \section{Checkpoint Recomputation}
 The checkpoint recomputation (CR) method keeps a checkpoint for the last successful execution's state.
